<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    tools:context=".screens.HomeFragment">

    <TextView
        android:id="@+id/tv_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/afternoons_are_for_inspiration"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_random_quotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_greetings"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_rectangle"
        android:padding="20dp"
        android:text="@string/random_quotes"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/search_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_random_quotes"
        android:layout_below="@id/tv_greetings"
        android:hint="@string/search"
        android:layout_alignParentEnd="true"
        android:padding="10sp"
        android:drawableEnd="@drawable/baseline_mic_none_24"
        android:drawableStart="@drawable/ic_search_24"
        android:drawablePadding="4dp"
        android:background="@drawable/cylindrical_background"
        android:layout_marginTop="12dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        tools:listitem="@layout/item_view"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_random_quotes"/>

</RelativeLayout>